Refactor form structure and improve accessibility in modal

--- a/index.html
+++ b/index.html
@@ -379,11 +379,11 @@
           </svg>
         </button>
         <form class="form js-speaker-form">
-          <ul ><p>Залиште свої дані, ми вам передзвонимо</p>
-            
+          <ul>
+            <p>Залиште свої дані, ми вам передзвонимо</p>
 
-            <li class="form-field">
-              <label  for="name">Ім'я</label> <input type="text" name="name" id="name"  />
+            <li >
+              <label for="name" class="form-field">Ім'я <input type="text" name="name" /></label>
             </li>
             <li class="form-field">
               <label for="tel">Телефон</label> <input type="tel" name="tel" id="tel" />
