Add checkbox for feedback and include SVG icon

--- a/index.html
+++ b/index.html
@@ -412,6 +412,13 @@
                 ></textarea>
               </label>
             </li>
+            <li>
+              <label class="label"
+                ><input class="checkbox" type="checkbox" />
+                <span class="checkbox-icon"></span>Погоджуюся з розсилкою та приймаю
+                <a href="./portfolio.html"> Умови договору</a>
+              </label>
+            </li>
           </ul>
           <button class="submit-btn" type="submit">Відправити</button>
         </form>
