Add subscription section with email input and button for newsletter sign-up

--- a/index.html
+++ b/index.html
@@ -367,6 +367,18 @@
                 </a>
               </li>
             </ul>
+            <div class="subscribe-us-container">
+              <p>Підпишіться на розсилку</p>
+              <label class="subscribe" for="email">
+                <input class="subscribe-us" type="email" name="email" placeholder="E-mail"
+              /></label>
+              <button class="subscribe-us-btn">
+                Підписатися
+                <svg class="subscribe-svg" widht="24" height="24">
+                  <use href="./images/modal-icns.svg#icon-send"></use>
+                </svg>
+              </button>
+            </div>
           </div>
         </div>
       </div>
