Add subscription section with improved layout and styling for newsletter sign-up

--- a/portfolio.html
+++ b/portfolio.html
@@ -261,6 +261,18 @@
               </li>
             </ul>
           </div>
+          <div class="subscribe-us-container">
+            <h2 class="subscribe-title">Підпишіться на розсилку</h2>
+            <label class="subscribe" for="newsletter">
+              <input class="subscribe-us" type="email" name="newsletter" placeholder="E-mail"
+            /></label>
+            <button class="subscribe-us-btn">
+              Підписатися
+              <svg class="subscribe-svg" widht="24" height="24">
+                <use href="./images/modal-icns.svg#icon-send"></use>
+              </svg>
+            </button>
+          </div>
         </div>
       </div>
     </footer>
