--- a/index.html
+++ b/index.html
@@ -367,18 +367,18 @@
                 </a>
               </li>
             </ul>
-            <div class="subscribe-us-container">
-              <p>Підпишіться на розсилку</p>
-              <label class="subscribe" for="email">
-                <input class="subscribe-us" type="email" name="email" placeholder="E-mail"
-              /></label>
-              <button class="subscribe-us-btn">
-                Підписатися
-                <svg class="subscribe-svg" widht="24" height="24">
-                  <use href="./images/modal-icns.svg#icon-send"></use>
-                </svg>
-              </button>
-            </div>
+          </div>
+          <div class="subscribe-us-container">
+            <h2 class="subscribe-title">Підпишіться на розсилку</h2>
+            <label class="subscribe" for="newsletter">
+              <input class="subscribe-us" type="email" name="newsletter" placeholder="E-mail"
+            /></label>
+            <button class="subscribe-us-btn">
+              Підписатися
+              <svg class="subscribe-svg" widht="24" height="24">
+                <use href="./images/modal-icns.svg#icon-send"></use>
+              </svg>
+            </button>
           </div>
         </div>
       </div>
